Add the google+ vanity URL

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ owner:
   flickr: 35991379@N06
   tumblr: #username
   google:
-    plus: #username
+    plus: StefanosTogoulidis
     analytics: UA-57911399-1
     verify:
     ad-client:
