Google webmaster tools verification

--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ owner:
   google:
     plus: StefanosTogoulidis
     analytics: UA-57911399-1
-    verify:
+    verify: j5vIChEZtai5mlj8VegVW4uv83ebHQVWN9XOtAU8D00
     ad-client:
     ad-slot: 
   bing-verify:
