--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url:
 
 # Jekyll configuration
 
-permalink:   /:categories/:title/
+permalink:   /:categories/:title.html
 markdown:    kramdown
 highlighter: pygments
 sass:
