Revert "Change permalink style to end in .html"
This reverts commit 0b269554a18264a5f8ab7fb716c0a608c1635795.

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ url:
 
 # Jekyll configuration
 
-permalink:   /:categories/:title.html
+permalink:   /:categories/:title/
 markdown:    kramdown
 highlighter: pygments
 sass:
