--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: I put stuff here.
 logo: site-logo.png
 search: true
 #url: //localhost:4000
-url: //hypest.org
+url: http://hypest.org
 
 
 # Jekyll configuration
